--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="tela-jogo">
+        <h1 id="pontuacao">0</h1>
         <img src="img/nuvens.png" class="nuvens">
         <img src="img/hugo-walk.gif" class="hugo">
         <img src="img/robo.png" class="robo">
